objects/CMSFolder__c.object
<CustomObject>
    <description>CMSForce Folders. Used to categorize Pages, PageTemplates and Web Forms</description>
    <fields>
        <fullName>Parent_CMSFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this folder is a subfolder, please select it&apos;s parent here.</inlineHelpText>
        <label>Parent CMSFolder</label>
        <referenceTo>CMSFolder__c</referenceTo>
        <relationshipLabel>Subfolders</relationshipLabel>
        <relationshipName>CMSFolder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <description>The Site that this folder belongs to.</description>
        <label>Site Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PageTemplate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebForm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Folder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_CMSFolder__c</columns>
        <columns>Type__c</columns>
        <columns>Site_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CMSFolder Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I80000000Qj30EAC_00N80000004UpQLEA0</fullName>
        <active>true</active>
        <errorMessage>The parent folder of a page template needs to be of type &apos;PageTemplate&apos;</errorMessage>
        <field>PageTemplate__c.Folder__c</field>
        <filterItems>
            <field>CMSFolder__c.Type__c</field>
            <operation>equals</operation>
            <value>PageTemplate</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>PageTemplate_Folder</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I80000000Qj31EAC_00N80000004R7vxEAC</fullName>
        <active>true</active>
        <errorMessage>The parent folder of a page needs to be of type &apos;Page&apos;</errorMessage>
        <field>Page__c.Folder__c</field>
        <filterItems>
            <field>CMSFolder__c.Type__c</field>
            <operation>equals</operation>
            <value>Page</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Page_Folder</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I80000000R6irEAC_00N80000004UpSREA0</fullName>
        <active>true</active>
        <errorMessage>The folder in which you place a web form needs to be of type &apos;WebForm&apos;</errorMessage>
        <field>Web_Form__c.Folder__c</field>
        <filterItems>
            <field>CMSFolder__c.Type__c</field>
            <operation>equals</operation>
            <value>WebForm</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Web Form_Folder</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I80000000ikjyEAA_00N80000004R7viEAC</fullName>
        <active>true</active>
        <field>CMSFolder__c.Parent_CMSFolder__c</field>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <valueField>CMSFolder__c.Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>CMSFolder_Parent CMSFolder</name>
        <sourceObject>CMSFolder__c</sourceObject>
    </namedFilters>
    <pluralLabel>Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMSForce_Site_Id_req_Root_folder</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
ISBLANK(Parent_CMSFolder__c),ISBLANK( Site_Id__c ),
 TEXT(Type__c)  = &apos;Page&apos;
)
, true,false)</errorConditionFormula>
        <errorMessage>Page root folders need to be attached to a Site.</errorMessage>
    </validationRules>
</CustomObject>